--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Familiar</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
@@ -12,27 +13,53 @@
         .chat-container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 10px;
         }
 
         .message-area {
-            height: 400px;
+            height: calc(100vh - 250px);
+            min-height: 300px;
+            max-height: 600px;
             overflow-y: auto;
             border: 1px solid #ddd;
             padding: 10px;
             margin-bottom: 10px;
+            background-color: #f9f9f9;
         }
 
         #emoji-picker-container {
             position: absolute;
             bottom: 60px;
-            right: 20px;
+            right: 0;
+            left: 0;
             display: none;
             z-index: 1000;
+            justify-content: center;
+        }
+
+        emoji-picker {
+            width: 100%;
+            max-width: 400px;
+            height: 300px;
         }
 
         .field.has-addons {
             position: relative;
+        }
+
+        @media screen and (max-width: 600px) {
+            .chat-container {
+                padding: 5px;
+            }
+
+            .title {
+                font-size: 1.5rem;
+                margin-bottom: 1rem !important;
+            }
+
+            .box {
+                padding: 1rem;
+            }
         }
     </style>
 </head>
