--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,6 +47,19 @@
             position: relative;
         }
 
+        .timestamp {
+            font-size: 0.75rem;
+            color: #888;
+            margin-left: 8px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        .message-content {
+            display: block;
+            margin-top: 5px;
+        }
+
         @media screen and (max-width: 600px) {
             .chat-container {
                 padding: 5px;
@@ -147,6 +160,17 @@
 
         function onConnected() {
             stompClient.subscribe('/topic/public', onMessageReceived);
+
+            // Fetch chat history
+            fetch('/api/messages')
+                .then(response => response.json())
+                .then(messages => {
+                    messages.forEach(msg => {
+                        onMessageReceived({ body: JSON.stringify(msg) });
+                    });
+                })
+                .catch(error => console.error('Error fetching history:', error));
+
             stompClient.send("/app/chat.addUser", {}, JSON.stringify({ sender: username, type: 'JOIN' }));
         }
 
@@ -170,16 +194,18 @@
         function onMessageReceived(payload) {
             var message = JSON.parse(payload.body);
             var messageElement = document.createElement('div');
+            messageElement.classList.add('notification');
+
+            var timeSpan = message.timestamp ? `<span class="timestamp">${message.timestamp}</span>` : '';
 
             if (message.type === 'JOIN') {
-                messageElement.classList.add('notification', 'is-success', 'is-light');
-                messageElement.innerText = message.sender + ' se unió!';
+                messageElement.classList.add('is-success', 'is-light');
+                messageElement.innerHTML = `<strong>${message.sender}</strong> se unió! ${timeSpan}`;
             } else if (message.type === 'LEAVE') {
-                messageElement.classList.add('notification', 'is-warning', 'is-light');
-                messageElement.innerText = message.sender + ' se fue!';
+                messageElement.classList.add('is-warning', 'is-light');
+                messageElement.innerHTML = `<strong>${message.sender}</strong> se fue! ${timeSpan}`;
             } else {
-                messageElement.classList.add('notification');
-                messageElement.innerHTML = '<strong>' + message.sender + ': </strong> ' + message.content;
+                messageElement.innerHTML = `<div><strong>${message.sender}</strong>${timeSpan}</div><div class="message-content">${message.content}</div>`;
             }
 
             var messageArea = document.querySelector('#messageArea');
